--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -19725,8 +19725,8 @@ comments</property>
                 </child>
               </widget>
               <packing>
-                <property name="expand">True</property>
-                <property name="fill">True</property>
+                <property name="expand">False</property>
+                <property name="fill">False</property>
                 <property name="position">6</property>
               </packing>
             </child>
